0026364: Foundation Classes, TKMath - Optimize BVH binned algorithm